--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -33,7 +33,7 @@ Lean Startup method is aiming for the goal of winning over customers and not opp
 
  A bitter fact for the developers is that usually the cause of messy code is the fault of the developers. While the management and sales staff are defending schedules and requirements, the developers should be defending the code. Many developers previously slowed down by messy code still feel the pressure of deadlines and the temptation to make messes to achieve them. Martin says that true professionals know that the only way to go fast is to keep the code as clean as possible at all times. A programmer able to write clean code is an artist, who can use all the little techniques in a disciplined manner through the sense of cleanliness.~\cite{martin2008clean}
  
- \textbf{Integrity.} One of the principles of Lean Software Development (LSD) is "Build Integrity In", which has its premises in high-performing automotive companies in 1980s. A study by Kim Clark found out that the product integrity was a key difference between average and high-performing companies in developing superior products. Clark found out that integrity has two dimensions: external integrity and internal integrity.~\cite{clark1991product}
+ \textbf{Integrity.} One of the principles of Lean Software Development (LSD) is "Build Integrity In", which has its premises in high-performing automotive companies in 1980s. A study "Product Development Performance" by Kim Clark found out that the product integrity was a key difference between average and high-performing companies in developing superior products. Clark found out that integrity has two dimensions: external integrity and internal integrity.~\cite{clark1991product}
 
  LSD renames these two types of integrities as perceived integrity and conceptual integrity. Perceived integrity is a balance of function, usability, reliability and economy observed by the customer. It is affected by the whole experience of the system beginning from advertising and delivery to intuitiveness and the ability to solve the problem. An analogy to the measure of perceived integrity comes from the question: which ones of the bookmarks of your browser would you add back immediately, if you wiped out them all? These are the products with perceived integrity. 
 
@@ -41,16 +41,49 @@ Lean Startup method is aiming for the goal of winning over customers and not opp
 
 \subsection{TODO: Aiming towards high quality}
 
+\textbf{Build Integrity In.} In the study by Kim Clark, a primary claim is that integrity is achieved through superior information flow. Perceived integrity is a projection of the integrity of the information flow between users and developers. In turn, conceptual integrity is a projection of the integrity of the upstream and downstream of technical information flow. When reaching a system with high perceived and conceptual integrity, an excellent information flow is necessary both between customer and development team and between the upstream and downstream processes of the development team. Information flows must take into account both the current and potential uses of the system.
+
+In traditional software development, perceived integrity is transmitted to programmers through a multistage process. In this process, requirements are collected and processed through analysis and design. Then the design is transfered to the programmers implementing the code. These multiple hand-offs will cause the loss of considerable amount of information, key details and future perspectives. Fortunately, an alternative for this multistage process is to establish a superior customer-developer information flow by other means. With smaller systems, the development should be done by a single team having direct access to the people capable of judging the systems integrity. This team should use short iterations in where the system is demonstrated to a wide range of people giving feedback about the integrity. This way the feedback can be used for a rapid steering of course. Another technique is to use customer tests purposely created for getting feedback.
+
+Conceptual integrity in automotive manufacturing is pursued by using existing parts and integrated problem solving.  % SIVU 137
+
 % LSD: design cycles, right the first time, cycles involving business
-% Lean startup: 
+
+% Conceptual integrity
+% Automotive -> effectiveness of communication mechanisms
+% Usage of existing parts
+% Integrated problem solving
+% Experienced developers
+% Frequent problem-solving cycles spanning upstream and downstream engineers
+
+% Refactoring
+
+% Testing
+%	Developer tests: unit, system, integration 
+%	Customer tests: acceptance tests
+%	Communication
+%	Feedback
+%	Scaffolding
+
+\textbf{Empower the Team.}
 
 
 
+% \textbf{TDD.}
 
+\textbf{Iterative development.}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\textbf{Activities.}
 
-% MILLÄ MENESTYKSELLÄ TEHDÄÄN JA KUINKA SOPII TÄHÄN SCOPEEN
+\begin{figure}[t]
+\begin{center}
+\includegraphics[width=1.0\textwidth]{image/pretest-efficiency.png}
+\end{center}
+\caption{Efficiency of pretest defect prevention}
+\label{fig:pretest-efficiency}
+\end{figure}
+
+Figure~\ref{fig:pretest-efficiency}
 
 % PREVENTIVE
 % -Small business applications p.126
