--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -62,16 +62,18 @@ The need for refactoring comes when new features are added to the system one at 
 TODO: p. 142-144
 
 % Testing
-In a traditional software development implementing single module at a time, there are numerous types of testing used. There are for example unit testing, system testing, integration testing and acceptance testing used. The purpose of testing is to check that the intention behind the design is achieved and the system does what the customers want it to. In LSD, the development is done by implementing entire features instead of single modules, so the distinction between the different kinds of testing types is more artificial. Instead, testing is divided into two parts: developer tests and customer tests. Developer tests are testing that the implemented features work as intended and that all the pieces work together. In turn, customer tests are developed to verify that the system does what customers expect.
+In a traditional software development where implementation is done single module at a time, there are numerous types of testing used. There are for example unit testing, system testing, integration testing and acceptance testing used. The purpose of testing is to check that the intention behind the design is achieved and the system does what the customers want it to. In LSD, the development is done by implementing entire features instead of single modules, so the distinction between the different kinds of testing is more artificial. Instead, testing is divided into two parts: developer tests and customer tests. Developer tests are testing that the implemented features work as intended and that all the pieces work together. Customer tests are developed to verify that the system does what customers expect.
 
-%	Developer tests: unit, system, integration 
-%	Customer tests: acceptance tests
-%	Communication
-%	Feedback
-%	Scaffolding
+Tests act in several different roles in the development process. First, they present the exact functioning that the features are supposed to have. Second, they also supply information on whether the features actually work as supposed. Third, tests act as a scaffolding which provides support for tools such as refactoring. This allows the developers to make changes during the development. Fourth, after the development is done, the tests provide a representation of how the system was built. Finally, developing sufficient tests for all systems in production, making changes to these systems can be verified by running the tests for all related applications.
 
-% LSD: design cycles, right the first time, cycles involving business
-% Frequent problem-solving cycles spanning upstream and downstream engineers
+% Communication
+Tests can also work as a tool for communication. Customer tests can be written within the conversation with the customer about details of desired functionality. This way the tests can give the most accurate description of how the features should work for a customer. Likewise, developers can document the planned design by writing tests testing exactly what the design should do. There are other tools allowing the communication before the code is written, but there is no substitute for testing whether the system does what it is supposed to do. With this in mind, using tests for both tasks can be beneficial.
+
+% Feedback
+Receiving immediate feedback about the correct operation of code is important to a developer. The developer usually somehow tests the code as soon as its written, so the test could be captured as a written test allowing the reuse. Another opportunity to catch necessary experiments as tests is the review to customer within an iteration. Demonstrating the current system to a customer can be done with a set of demos or scripts, which can be captured as customer tests. These captured tests should be run as often as possible, so the team should ensure that the tests will not take too much time and are automated as much as possible.
+
+% Scaffolding
+Using automated testing with extensive test suites for both developer testing and customer testing can be an efficient way to implement scaffolding to support the development. The scaffolding is a structure supporting the developers when they are making major changes to the system. While developing software in iterations, refactoring and other tools will include changes, which tend to have unintended effects. Having these effects in the system without the scaffolding provided by automatic tests can be an unsustainable situation. Often it may seem that writing tests slows down the development, but it pays back both during development and over the systems life cycle.
 
 \textbf{Empower the Team.}
 
@@ -80,6 +82,7 @@ In a traditional software development implementing single module at a time, ther
 % \textbf{TDD.}
 
 \textbf{Iterative development.}
+% p.27
 
 \textbf{Activities.}
 
@@ -118,16 +121,13 @@ Figure~\ref{fig:pretest-efficiency}
 % {poppendieck2006implementing} 
 
 \subsection{The Don'ts - Things To Avoid}
- 
-% \begin{itemize}
- 
+
 % Liittyy vahvasti Leanin Wasteen
 % Älä raportoi bugeja, joista tiedät, ettei niitä korjata
 % Ei turhia raportteja
 % ECO: Cost per defect => paras tulos bugisimmassa projektissa
- 
-% \end{itemize}
-
 % ECO:  p. 127 harmful combinations PREVENTIVE
+
+% Right the first time LSD p.19(?)
 
 Capers Jones has interpreted from the research of multiple years of software quality that there can be harmful combinations of methods used. Even when combinind harmful methods with helpful ones, the harmful method seem to end up winning. That is, defect potentials are raising instead of coming down. Some methods combined with others can raise the defect potentials and make applications risky with a change of failure.
